--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -64,6 +64,18 @@
     /* -1px */
 }
 
+/* Large Button */
+.button--large {
+    padding: 1.25rem 4rem;
+    font-size: 1.5rem;
+}
+
+/* Small Button */
+.button--small {
+    padding: 0.75rem 2rem;
+    font-size: 1rem;
+}
+
 /* Disabled Button */
 .button:disabled,
 .button--disabled {
@@ -71,4 +83,3 @@
     cursor: not-allowed;
     pointer-events: none;
 }
-
