--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
 
 /*utils */
 @import "./utils/variables.css";
+@import "./utils/main.css";
 
 /*layout*/
 @import "./layout/header.css";
@@ -15,40 +16,45 @@
 @import "./components/button.css";
 @import "./components/cardNavigation.css";
 @import "./components/partenaire.css";
-
+/* Added new component imports for all pages */
+@import "./components/festival.css";
+@import "./components/programme.css";
+@import "./components/artistes.css";
+@import "./components/scenes.css";
+@import "./components/infos-pratiques.css";
+@import "./components/contact.css";
 
 /* add typo corier prime */
 .courier-prime-regular {
-    font-family: "Courier Prime", monospace;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .courier-prime-bold {
-    font-family: "Courier Prime", monospace;
-    font-weight: 700;
-    font-style: normal;
+  font-family: "Courier Prime", monospace;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .courier-prime-regular-italic {
-    font-family: "Courier Prime", monospace;
-    font-weight: 400;
-    font-style: italic;
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  font-style: italic;
 }
 
 .courier-prime-bold-italic {
-    font-family: "Courier Prime", monospace;
-    font-weight: 700;
-    font-style: italic;
+  font-family: "Courier Prime", monospace;
+  font-weight: 700;
+  font-style: italic;
 }
 
 /* add typo roboto */
 
 .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
